--- a/index.html
+++ b/index.html
@@ -6,28 +6,28 @@
 <link rel="stylesheet" href="style.css">
 </head>
   <body>
-<div class="macaco">
+    <div class="fondo">
+      <div class="macaco">
+        <div class="cabeza">
+          <div class="ojo derecho"></div>
+          <div class="ojo izquierdo"></div>
+          <div class="boca"></div>
+        </div>
 
-<div class="fondo">
+        <div class="barriga">
+          <div class="brazo">
+            <div class="mano"></div>
+          </div>
+          <div class="brazo2">
+            <div class="mano2"></div>
+          </div>
+          <div class="pierna"></div>
+          <div class="pierna2"></div>
+        </div>
 
-<div class="cabeza">
-  <div class="ojo derecho"></div>
-  <div class="ojo izquierdo"></div>
-<div class="boca"></div>
-</div>
-
-<div class="cuerpo">
-</div>
-
-<div class="brazo">
-</div>
-<div class="brazo2">
-</div>
-<div class="mano">
-</div>
-<div class="mano2">
-</div>
-
-</div>
-
-</div>
+        <div class="pierna-derecha"></div>
+        <div class="pierna-izquierda"></div>
+      </d iv>
+    </div>
+  </body>
+</html>
