--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         </div>
 
         <div class="barriga">
+          <div class="tableta"></div>
+          <div class="tableta1"></div>
+          <div class="tableta2"></div>
           <div class="brazo">
             <div class="mano"></div>
           </div>
@@ -27,7 +30,9 @@
 
         <div class="pierna-derecha"></div>
         <div class="pierna-izquierda"></div>
-      </d iv>
+        <div class="pie"></div>
+        <div class="pie1"></div>
+      </div>
     </div>
   </body>
 </html>
