--- a/index.html
+++ b/index.html
@@ -9,12 +9,18 @@
     <div class="fondo">
       <div class="macaco">
         <div class="cabeza">
+          <div class="gafas">
+            <img src="aaa.png" alt="">
+          </div>
           <div class="ojo derecho"></div>
           <div class="ojo izquierdo"></div>
           <div class="boca"></div>
         </div>
 
         <div class="barriga">
+          <div class="alas">
+            <img src="alas.png" alt="">
+          </div>
           <div class="tableta"></div>
           <div class="tableta1"></div>
           <div class="tableta2"></div>
@@ -32,6 +38,13 @@
         <div class="pierna-izquierda"></div>
         <div class="pie"></div>
         <div class="pie1"></div>
+        <div class="fondoplaya"><img src="fondoplaya.jpg" alt="">        </div>
+
+          <div class="cascada"><img src="cascada.gif" alt="">
+
+          </div>
+
+
       </div>
     </div>
   </body>
